OSX: Modal Input: Ctrl+- not working #38424

Closed
opened 2014-01-31 22:11:46 +01:00 by Sebastian Röthlisberger · 8 comments

System Information
Operating system and graphics card

Blender Version
Broken: trunk 9896508
Worked: (optional)

Short description of error
Ctrl+- does not invert in Modal Input

Exact steps for others to reproduce the error
select object, g, 5, Ctrl+-

+I would suggest to make a Key Configuration so one can change it in User Prefs - i personally (on osx) really don't like having it on ctrl+-. Since this uses two hands - i rather have it on shift+-

**System Information** Operating system and graphics card **Blender Version** Broken: trunk 9896508 Worked: (optional) **Short description of error** Ctrl+- does not invert in Modal Input **Exact steps for others to reproduce the error** select object, g, 5, Ctrl+- +I would suggest to make a Key Configuration so one can change it in User Prefs - i personally (on osx) really don't like having it on ctrl+-. Since this uses two hands - i rather have it on shift+-

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

This issue was referenced by blender/blender-addons-contrib@e996b88004

This issue was referenced by blender/blender-addons-contrib@e996b880048b6ad6147d1b4af42db6c6aa9ba71d

This issue was referenced by e996b88004

This issue was referenced by e996b880048b6ad6147d1b4af42db6c6aa9ba71d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e996b88004.

Closed by commit e996b88004.

Added subscriber: @brecht

Added subscriber: @brecht

I agree user configuration would be good, but will not consider that a bug.

I agree user configuration would be good, but will not consider that a bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38424
No description provided.