Fix T38424: modal number input ctrl - did not work, only ctrl numpad -.

Since there isn't always a numpad available this should work.